Updating menu bar

--- a/_codes/2017-03-25-ising.md
+++ b/_codes/2017-03-25-ising.md
@@ -3,7 +3,7 @@ layout: code
 title:  "Ising 2D Lattice"
 date:   2017-03-25 12:00:00 +0100
 categories: cpp ising lattice
-excerpt: "Modello di Ising"
+excerpt: "Implementazione del modello di Ising su reticolo 2D con condizioni al bordo periodiche."
 ---
 {% highlight cpp %}
 #pragma GCC optimize "O3,omit-frame-pointer,inline"
